--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 text-gray-800">
+<!-- Hero Section with Video -->
+<section class="bg-black text-white py-16 px-4">
+  <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-8 items-center">
+    <!-- Text Content -->
+    <div class="text-center md:text-left">
+      <h1 class="text-4xl md:text-6xl font-extrabold uppercase tracking-wider">Mobisana Boxing</h1>
+      <p class="mt-4 text-lg md:text-xl">Train Hard. Fight Smart. Stay Strong.</p>
+      <a href="#contact" class="inline-block mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold">Book a Session</a>
+    </div>
 
+    <!-- Intro Video -->
+    <div class="w-full">
+      <div class="aspect-w-16 aspect-h-9">
+        <iframe class="w-full h-64 md:h-80 rounded shadow-lg"
+          src="https://www.youtube.com/embed/dpOwP7Xf6wQ"
+          title="Mobisana Boxing Intro"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+  </div>
+</section>
   <!-- Hero Section -->
   <section class="bg-black text-white text-center py-20">
     <h1 class="text-4xl md:text-6xl font-bold uppercase tracking-wider">Mobisana Boxing</h1>
