--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <title>Mobisana | Boxing Trainer</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
+  <!-- Floating WhatsApp Button -->
+<a
+  href="https://wa.me/+91 8296371730"
+  target="_blank"
+  class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg z-50 flex items-center justify-center"
+  aria-label="Chat on WhatsApp"
+  title="Chat on WhatsApp"
+>
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="white" viewBox="0 0 24 24">
+    <path d="M16.45 13.46c-.25-.13-1.47-.73-1.7-.82-.23-.08-.4-.13-.56.13-.16.25-.64.82-.79.98-.15.16-.29.18-.54.06-.25-.13-1.05-.39-2-1.26-.74-.66-1.24-1.48-1.38-1.73-.14-.25-.02-.39.1-.52.1-.1.25-.26.38-.39.12-.13.16-.22.24-.37.08-.16.04-.29-.02-.42-.06-.13-.56-1.34-.77-1.83-.2-.48-.4-.41-.56-.42h-.48c-.17 0-.42.06-.64.29-.22.23-.84.82-.84 2 .01 1.17.85 2.3.97 2.46.13.17 1.67 2.55 4.06 3.58.57.25 1.02.4 1.37.52.57.18 1.09.15 1.5.09.46-.07 1.47-.6 1.68-1.18.2-.57.2-1.05.14-1.16-.06-.1-.23-.16-.48-.29zM12.04 2C6.5 2 2.04 6.46 2.04 12c0 2.1.7 4.05 1.88 5.62L2 22l4.51-1.89a9.924 9.924 0 005.53 1.61c5.54 0 10-4.46 10-10S17.58 2 12.04 2zM12 20c-1.74 0-3.36-.51-4.72-1.39l-.34-.21-2.67 1.11.57-2.77-.18-.29a7.96 7.96 0 01-1.38-4.44C3.28 7.58 7.58 3.28 12 3.28S20.72 7.58 20.72 12c0 4.42-4.3 8.72-8.72 8.72z" />
+  </svg>
+</a>
 <body class="bg-gray-100 text-gray-800">
 <!-- Hero Section with Video -->
 <section class="bg-black text-white py-16 px-4">
@@ -21,7 +33,7 @@
     <div class="w-full">
       <div class="aspect-w-16 aspect-h-9">
         <iframe class="w-full h-64 md:h-80 rounded shadow-lg"
-          src="https://www.youtube.com/embed/dpOwP7Xf6wQ"
+          src="https://www.youtube.com/watch?v=xnumVKGCc3k"
           title="Mobisana Boxing Intro"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -37,13 +49,81 @@
     <p class="mt-4 text-lg md:text-xl">Train Hard. Fight Smart. Stay Strong.</p>
     <a href="#contact" class="inline-block mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold">Book a Session</a>
   </section>
+<!-- About + Credentials Section -->
+<section id="about" class="bg-white py-16 px-6">
+  <div class="max-w-5xl mx-auto text-center">
+    <h2 class="text-3xl md:text-4xl font-bold mb-4">🥊 About Coach Mobisana</h2>
+    <p class="text-lg md:text-xl text-gray-700 mb-6">
+      I'm <strong>Mobisana</strong>, a passionate and certified boxing trainer with over 5 years of experience transforming fighters and fitness enthusiasts into their best selves — both mentally and physically. My approach is personal, disciplined, and goal-focused.
+    </p>
+  </div>
 
+  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center mt-10">
+    <!-- Image or Photo -->
+    <div class="text-center">
+      <img src="assets/coach.jpg" alt="Coach Mobisana" class="rounded-lg shadow-lg w-80 mx-auto">
+      <p class="text-sm mt-2 text-gray-500">Your Coach, Your Corner</p>
+    </div>
+
+    <!-- Credentials -->
+    <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
+      <h3 class="text-2xl font-semibold mb-4 text-red-600">Certifications & Highlights</h3>
+      <ul class="list-disc list-inside text-gray-700 space-y-2 text-lg">
+        <li>🏅 Certified Boxing Coach – Indian Boxing Federation</li>
+        <li>🥋 Black Belt in Kickboxing – 2nd Dan</li>
+        <li>💪 5+ Years of Personal Coaching Experience</li>
+        <li>🧠 Sports Psychology & Nutrition Certified</li>
+        <li>👥 Trained 100+ Athletes Across India</li>
+      </ul>
+    </div>
+  </div>
+</section>
   <!-- About Section -->
   <section class="max-w-4xl mx-auto p-6">
     <h2 class="text-3xl font-bold text-center mb-6">🥊 About Me</h2>
     <p class="text-lg text-center">I'm Mobisana, a certified boxing trainer with 5+ years of experience helping fighters build power, speed, and strategy. Whether you're training for fitness or for the ring, I design personalized plans that get real results.</p>
   </section>
+<!-- Training Programs Section -->
+<section id="programs" class="bg-gray-100 py-16 px-6">
+  <div class="max-w-6xl mx-auto text-center">
+    <h2 class="text-3xl md:text-4xl font-bold mb-10 text-gray-800">💪 Training Programs</h2>
 
+    <div class="grid md:grid-cols-3 gap-8">
+      <!-- 1-on-1 Coaching -->
+      <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition-all duration-300">
+        <h3 class="text-xl font-semibold text-red-600 mb-3">1-on-1 Coaching</h3>
+        <p class="text-gray-700 mb-4">Personalized, intense training tailored to your goals — from power and speed to form and mindset.</p>
+        <ul class="text-left list-disc list-inside text-gray-600 text-sm">
+          <li>Full focus on your technique</li>
+          <li>Strength + conditioning plan</li>
+          <li>Weekly progress tracking</li>
+        </ul>
+      </div>
+
+      <!-- Group Training -->
+      <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition-all duration-300">
+        <h3 class="text-xl font-semibold text-red-600 mb-3">Group Sessions</h3>
+        <p class="text-gray-700 mb-4">Train with other fighters and fitness enthusiasts to push limits together in a competitive but supportive setup.</p>
+        <ul class="text-left list-disc list-inside text-gray-600 text-sm">
+          <li>Motivating team energy</li>
+          <li>HIIT & endurance focused</li>
+          <li>Max 8 per batch</li>
+        </ul>
+      </div>
+
+      <!-- Fight Camp / Advanced -->
+      <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition-all duration-300">
+        <h3 class="text-xl font-semibold text-red-600 mb-3">Fight Camp</h3>
+        <p class="text-gray-700 mb-4">Preparing for a fight or event? Get serious conditioning, sparring, weight cuts, and mindset coaching.</p>
+        <ul class="text-left list-disc list-inside text-gray-600 text-sm">
+          <li>Pre-fight diet and drills</li>
+          <li>Fight strategy & endurance</li>
+          <li>Mock fights & recovery</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
   <!-- Programs / Services -->
   <section class="bg-white py-10">
     <div class="max-w-5xl mx-auto px-6">
