--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact Mobisana | Boxing Trainer</title>
+  <title>Contact Yaiphaba | Boxing Trainer</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 text-gray-800">
 
   <!-- Header -->
   <header class="bg-black text-white py-6 text-center">
-    <h1 class="text-3xl font-bold uppercase">📞 Contact Mobisana</h1>
+    <h1 class="text-3xl font-bold uppercase">📞 Contact Yaiphaba</h1>
     <p class="text-lg mt-2">Book your training or ask anything</p>
   </header>
 
@@ -19,7 +19,7 @@
     <h2 class="text-2xl font-semibold text-center mb-6">Send a Message</h2>
     <div class="w-full aspect-w-16 aspect-h-9">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSe_example_form_link/viewform?embedded=true"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeiQasvOZdllh_2GZnIFg8h75EHd0hrW8nahlxsVZ7xyCI83Q/viewform?usp=sharing&ouid=117480319005390558959"
         width="100%"
         height="800"
         frameborder="0"
@@ -41,7 +41,7 @@
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-4">
-    &copy; 2025 Mobisana Boxing | All rights reserved.
+    &copy; 2025 Yaiphaba Boxing | All rights reserved.
   </footer>
 
 </body>
