--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   </div>
 </section>
   <!-- Hero Section -->
+  <a href="contact.html" class="px-4 py-2 bg-red-600 rounded text-white">Contact</a>
   <section class="bg-black text-white text-center py-20">
     <h1 class="text-4xl md:text-6xl font-bold uppercase tracking-wider">Mobisana Boxing</h1>
     <p class="mt-4 text-lg md:text-xl">Train Hard. Fight Smart. Stay Strong.</p>
