--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mobisana | Boxing Trainer</title>
+  <title>Yaiphaba | Boxing Trainer</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
   <!-- Floating WhatsApp Button -->
@@ -24,7 +24,7 @@
   <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-8 items-center">
     <!-- Text Content -->
     <div class="text-center md:text-left">
-      <h1 class="text-4xl md:text-6xl font-extrabold uppercase tracking-wider">Mobisana Boxing</h1>
+      <h1 class="text-4xl md:text-6xl font-extrabold uppercase tracking-wider">Yaiphaba Boxing</h1>
       <p class="mt-4 text-lg md:text-xl">Train Hard. Fight Smart. Stay Strong.</p>
       <a href="#contact" class="inline-block mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold">Book a Session</a>
     </div>
@@ -46,16 +46,16 @@
   <!-- Hero Section -->
   <a href="contact.html" class="px-4 py-2 bg-red-600 rounded text-white">Contact</a>
   <section class="bg-black text-white text-center py-20">
-    <h1 class="text-4xl md:text-6xl font-bold uppercase tracking-wider">Mobisana Boxing</h1>
+    <h1 class="text-4xl md:text-6xl font-bold uppercase tracking-wider">Yaiphaba Boxing</h1>
     <p class="mt-4 text-lg md:text-xl">Train Hard. Fight Smart. Stay Strong.</p>
     <a href="#contact" class="inline-block mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold">Book a Session</a>
   </section>
 <!-- About + Credentials Section -->
 <section id="about" class="bg-white py-16 px-6">
   <div class="max-w-5xl mx-auto text-center">
-    <h2 class="text-3xl md:text-4xl font-bold mb-4">🥊 About Coach Mobisana</h2>
+    <h2 class="text-3xl md:text-4xl font-bold mb-4">🥊 About Coach Yaiphaba</h2>
     <p class="text-lg md:text-xl text-gray-700 mb-6">
-      I'm <strong>Mobisana</strong>, a passionate and certified boxing trainer with over 5 years of experience transforming fighters and fitness enthusiasts into their best selves — both mentally and physically. My approach is personal, disciplined, and goal-focused.
+      I'm <strong>Yaiphaba</strong>, a passionate and certified boxing trainer with over 5 years of experience transforming fighters and fitness enthusiasts into their best selves — both mentally and physically. My approach is personal, disciplined, and goal-focused.
     </p>
   </div>
 
@@ -82,7 +82,7 @@
   <!-- About Section -->
   <section class="max-w-4xl mx-auto p-6">
     <h2 class="text-3xl font-bold text-center mb-6">🥊 About Me</h2>
-    <p class="text-lg text-center">I'm Mobisana, a certified boxing trainer with 5+ years of experience helping fighters build power, speed, and strategy. Whether you're training for fitness or for the ring, I design personalized plans that get real results.</p>
+    <p class="text-lg text-center">I'm Yaiphaba, a certified boxing trainer with 5+ years of experience helping fighters build power, speed, and strategy. Whether you're training for fitness or for the ring, I design personalized plans that get real results.</p>
   </section>
 <!-- Training Programs Section -->
 <section id="programs" class="bg-gray-100 py-16 px-6">
@@ -161,7 +161,7 @@
   <section id="contact" class="bg-black text-white py-12">
     <div class="max-w-xl mx-auto px-6">
       <h2 class="text-3xl font-bold text-center mb-6">📞 Contact Me</h2>
-      <p class="text-center text-lg">Email: <a href="mailto:mobisana@example.com" class="text-red-400 hover:underline">mobisana@example.com</a></p>
+      <p class="text-center text-lg">Email: <a href="mailto:mobisana@example.com" class="text-red-400 hover:underline">yaiphaba@example.com</a></p>
       <p class="text-center text-lg mt-2">Phone: <a href="tel:+919876543210" class="text-red-400 hover:underline">+91 98765 43210</a></p>
       <div class="text-center mt-4">
         <a href="https://wa.me/919876543210" target="_blank" class="inline-block bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded">📱 WhatsApp Me</a>
@@ -171,7 +171,7 @@
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-center text-white py-4">
-    &copy; 2025 Mobisana Boxing. Built with 🥊 and 💻.
+    &copy; 2025 Yaiphaba Boxing. Built with 🥊 and 💻.
   </footer>
 
 </body>
