--- a/index.html
+++ b/index.html
@@ -23,17 +23,13 @@
 <section class="bg-black text-white py-16 px-4">
   <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-8 items-center">
     <!-- Text Content -->
-    <div class="text-center md:text-left">
-      <h1 class="text-4xl md:text-6xl font-extrabold uppercase tracking-wider">Yaiphaba Boxing</h1>
-      <p class="mt-4 text-lg md:text-xl">Train Hard. Fight Smart. Stay Strong.</p>
-      <a href="#contact" class="inline-block mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold">Book a Session</a>
-    </div>
+  
 
     <!-- Intro Video -->
     <div class="w-full">
       <div class="aspect-w-16 aspect-h-9">
         <iframe class="w-full h-64 md:h-80 rounded shadow-lg"
-          src="https://www.youtube.com/watch?v=xnumVKGCc3k"
+          src="https://www.youtube.com/shorts/5QW9ybcaYzY"
           title="Mobisana Boxing Intro"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
