--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
     <!-- Intro Video -->
     <div class="w-full">
       <div class="aspect-w-16 aspect-h-9">
-        <iframe class="w-full h-64 md:h-80 rounded shadow-lg"
-          src="https://www.youtube.com/shorts/5QW9ybcaYzY"
-          title="Mobisana Boxing Intro"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-        </iframe>
+        <!-- Intro Video from Local Assets -->
+<video controls autoplay muted loop class="w-full h-64 md:h-80 rounded shadow-lg object-cover">
+  <source src="assets/mobisana-intro.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
       </div>
     </div>
   </div>
