--- a/index.html
+++ b/index.html
@@ -29,10 +29,21 @@
     <div class="w-full">
       <div class="aspect-w-16 aspect-h-9">
         <!-- Intro Video from Local Assets -->
-<video controls autoplay muted loop class="w-full h-64 md:h-80 rounded shadow-lg object-cover">
-  <source src="assets/mobisana-intro.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+<!-- Hero Section with Background Video -->
+<section class="relative w-full h-screen overflow-hidden">
+  <!-- Background Video -->
+  <video autoplay muted loop playsinline class="absolute top-0 left-0 w-full h-full object-cover z-0">
+    <source src="assets/mobisana-intro.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Overlay Content -->
+  <div class="absolute inset-0 bg-black bg-opacity-60 z-10 flex flex-col items-center justify-center text-white text-center px-6">
+    <h1 class="text-4xl md:text-6xl font-extrabold uppercase tracking-wider">Mobisana Boxing</h1>
+    <p class="mt-4 text-lg md:text-xl max-w-xl">Train Hard. Fight Smart. Stay Strong.</p>
+    <a href="#contact" class="mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold">Book a Session</a>
+  </div>
+</section>
       </div>
     </div>
   </div>
