--- a/index.html
+++ b/index.html
@@ -5,171 +5,118 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Yaiphaba | Boxing Trainer</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
-  <!-- Floating WhatsApp Button -->
-<a
-  href="https://wa.me/+91 8296371730"
-  target="_blank"
-  class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg z-50 flex items-center justify-center"
-  aria-label="Chat on WhatsApp"
-  title="Chat on WhatsApp"
->
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="white" viewBox="0 0 24 24">
-    <path d="M16.45 13.46c-.25-.13-1.47-.73-1.7-.82-.23-.08-.4-.13-.56.13-.16.25-.64.82-.79.98-.15.16-.29.18-.54.06-.25-.13-1.05-.39-2-1.26-.74-.66-1.24-1.48-1.38-1.73-.14-.25-.02-.39.1-.52.1-.1.25-.26.38-.39.12-.13.16-.22.24-.37.08-.16.04-.29-.02-.42-.06-.13-.56-1.34-.77-1.83-.2-.48-.4-.41-.56-.42h-.48c-.17 0-.42.06-.64.29-.22.23-.84.82-.84 2 .01 1.17.85 2.3.97 2.46.13.17 1.67 2.55 4.06 3.58.57.25 1.02.4 1.37.52.57.18 1.09.15 1.5.09.46-.07 1.47-.6 1.68-1.18.2-.57.2-1.05.14-1.16-.06-.1-.23-.16-.48-.29zM12.04 2C6.5 2 2.04 6.46 2.04 12c0 2.1.7 4.05 1.88 5.62L2 22l4.51-1.89a9.924 9.924 0 005.53 1.61c5.54 0 10-4.46 10-10S17.58 2 12.04 2zM12 20c-1.74 0-3.36-.51-4.72-1.39l-.34-.21-2.67 1.11.57-2.77-.18-.29a7.96 7.96 0 01-1.38-4.44C3.28 7.58 7.58 3.28 12 3.28S20.72 7.58 20.72 12c0 4.42-4.3 8.72-8.72 8.72z" />
-  </svg>
-</a>
 <body class="bg-gray-100 text-gray-800">
-<!-- Hero Section with Video -->
-<section class="bg-black text-white py-16 px-4">
-  <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-8 items-center">
-    <!-- Text Content -->
-  
+  <!-- Floating WhatsApp Button -->
+  <a
+    href="https://wa.me/918296371730"
+    target="_blank"
+    class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg z-50 flex items-center justify-center"
+    aria-label="Chat on WhatsApp"
+    title="Chat on WhatsApp"
+  >
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="white" viewBox="0 0 24 24">
+      <path d="M16.45 13.46c-.25-.13-1.47-.73-1.7-.82-.23-.08-.4-.13-.56.13-.16.25-.64.82-.79.98-.15.16-.29.18-.54.06-.25-.13-1.05-.39-2-1.26-.74-.66-1.24-1.48-1.38-1.73-.14-.25-.02-.39.1-.52.1-.1.25-.26.38-.39.12-.13.16-.22.24-.37.08-.16.04-.29-.02-.42-.06-.13-.56-1.34-.77-1.83-.2-.48-.4-.41-.56-.42h-.48c-.17 0-.42.06-.64.29-.22.23-.84.82-.84 2 .01 1.17.85 2.3.97 2.46.13.17 1.67 2.55 4.06 3.58.57.25 1.02.4 1.37.52.57.18 1.09.15 1.5.09.46-.07 1.47-.6 1.68-1.18.2-.57.2-1.05.14-1.16-.06-.1-.23-.16-.48-.29zM12.04 2C6.5 2 2.04 6.46 2.04 12c0 2.1.7 4.05 1.88 5.62L2 22l4.51-1.89a9.924 9.924 0 005.53 1.61c5.54 0 10-4.46 10-10S17.58 2 12.04 2zM12 20c-1.74 0-3.36-.51-4.72-1.39l-.34-.21-2.67 1.11.57-2.77-.18-.29a7.96 7.96 0 01-1.38-4.44C3.28 7.58 7.58 3.28 12 3.28S20.72 7.58 20.72 12c0 4.42-4.3 8.72-8.72 8.72z" />
+    </svg>
+  </a>
 
-    <!-- Intro Video -->
-    <div class="w-full">
-      <div class="aspect-w-16 aspect-h-9">
-        <!-- Intro Video from Local Assets -->
-<!-- Hero Section with Background Video -->
-<section class="relative w-full h-screen overflow-hidden">
-  <!-- Background Video -->
-  <video autoplay muted loop playsinline class="absolute top-0 left-0 w-full h-full object-cover z-0">
-    <source src="assets/mobisana-intro.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-
-  <!-- Overlay Content -->
-  <div class="absolute inset-0 bg-black bg-opacity-60 z-10 flex flex-col items-center justify-center text-white text-center px-6">
-    <h1 class="text-4xl md:text-6xl font-extrabold uppercase tracking-wider">Mobisana Boxing</h1>
-    <p class="mt-4 text-lg md:text-xl max-w-xl">Train Hard. Fight Smart. Stay Strong.</p>
-    <a href="#contact" class="mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold">Book a Session</a>
-  </div>
-</section>
-      </div>
+  <!-- Hero Section with Background Video -->
+  <section class="relative w-full h-screen overflow-hidden">
+    <video autoplay muted loop playsinline class="absolute top-0 left-0 w-full h-full object-cover z-0">
+      <source src="assets/mobisana-intro.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="absolute inset-0 bg-black bg-opacity-60 z-10 flex flex-col items-center justify-center text-white text-center px-6">
+      <h1 class="text-5xl md:text-7xl font-extrabold uppercase tracking-wide">Yaiphaba Boxing</h1>
+      <p class="mt-4 text-lg md:text-2xl max-w-2xl">Unleash your inner fighter. Personal coaching. Real results.</p>
+      <a href="#contact" class="mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold transition">Book a Session</a>
     </div>
-  </div>
-</section>
-  <!-- Hero Section -->
-  <a href="contact.html" class="px-4 py-2 bg-red-600 rounded text-white">Contact</a>
-  <section class="bg-black text-white text-center py-20">
-    <h1 class="text-4xl md:text-6xl font-bold uppercase tracking-wider">Yaiphaba Boxing</h1>
-    <p class="mt-4 text-lg md:text-xl">Train Hard. Fight Smart. Stay Strong.</p>
-    <a href="#contact" class="inline-block mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold">Book a Session</a>
   </section>
-<!-- About + Credentials Section -->
-<section id="about" class="bg-white py-16 px-6">
-  <div class="max-w-5xl mx-auto text-center">
-    <h2 class="text-3xl md:text-4xl font-bold mb-4">🥊 About Coach Yaiphaba</h2>
-    <p class="text-lg md:text-xl text-gray-700 mb-6">
-      I'm <strong>Yaiphaba</strong>, a passionate and certified boxing trainer with over 5 years of experience transforming fighters and fitness enthusiasts into their best selves — both mentally and physically. My approach is personal, disciplined, and goal-focused.
-    </p>
-  </div>
 
-  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center mt-10">
-    <!-- Image or Photo -->
-    <div class="text-center">
-      <img src="assets/coach.jpg" alt="Coach Mobisana" class="rounded-lg shadow-lg w-80 mx-auto">
-      <p class="text-sm mt-2 text-gray-500">Your Coach, Your Corner</p>
+  <!-- About + Credentials Section -->
+  <section id="about" class="bg-white py-16 px-6">
+    <div class="max-w-5xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-6">🥊 About Coach Yaiphaba</h2>
+      <p class="text-lg text-gray-700 mb-10">I'm <strong>Yaiphaba</strong>, a passionate and certified boxing trainer with over 5 years of experience transforming lives through powerful, personalized boxing training. Discipline, grit, and results are my core principles.</p>
     </div>
-
-    <!-- Credentials -->
-    <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
-      <h3 class="text-2xl font-semibold mb-4 text-red-600">Certifications & Highlights</h3>
-      <ul class="list-disc list-inside text-gray-700 space-y-2 text-lg">
-        <li>🏅 Certified Boxing Coach – Indian Boxing Federation</li>
-        <li>🥋 Black Belt in Kickboxing – 2nd Dan</li>
-        <li>💪 5+ Years of Personal Coaching Experience</li>
-        <li>🧠 Sports Psychology & Nutrition Certified</li>
-        <li>👥 Trained 100+ Athletes Across India</li>
-      </ul>
+    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
+      <div class="text-center">
+        <img src="assets/coach.jpg" alt="Coach Yaiphaba" class="rounded-lg shadow-xl w-80 mx-auto">
+        <p class="text-sm mt-2 text-gray-500">Your Coach. Your Guide.</p>
+      </div>
+      <div class="bg-gray-100 p-6 rounded-lg shadow-xl">
+        <h3 class="text-2xl font-semibold mb-4 text-red-600">Certifications & Highlights</h3>
+        <ul class="list-disc list-inside text-gray-700 space-y-2 text-lg">
+          <li>🏅 Certified Boxing Coach – Indian Boxing Federation</li>
+          <li>🥋 Black Belt in Kickboxing – 2nd Dan</li>
+          <li>💪 5+ Years of Personal Coaching Experience</li>
+          <li>🧠 Certified in Sports Psychology & Nutrition</li>
+          <li>👥 Mentored 100+ Fighters Across India</li>
+        </ul>
+      </div>
     </div>
-  </div>
-</section>
-  <!-- About Section -->
-  <section class="max-w-4xl mx-auto p-6">
-    <h2 class="text-3xl font-bold text-center mb-6">🥊 About Me</h2>
-    <p class="text-lg text-center">I'm Yaiphaba, a certified boxing trainer with 5+ years of experience helping fighters build power, speed, and strategy. Whether you're training for fitness or for the ring, I design personalized plans that get real results.</p>
   </section>
-<!-- Training Programs Section -->
-<section id="programs" class="bg-gray-100 py-16 px-6">
-  <div class="max-w-6xl mx-auto text-center">
-    <h2 class="text-3xl md:text-4xl font-bold mb-10 text-gray-800">💪 Training Programs</h2>
 
-    <div class="grid md:grid-cols-3 gap-8">
-      <!-- 1-on-1 Coaching -->
-      <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition-all duration-300">
-        <h3 class="text-xl font-semibold text-red-600 mb-3">1-on-1 Coaching</h3>
-        <p class="text-gray-700 mb-4">Personalized, intense training tailored to your goals — from power and speed to form and mindset.</p>
-        <ul class="text-left list-disc list-inside text-gray-600 text-sm">
-          <li>Full focus on your technique</li>
-          <li>Strength + conditioning plan</li>
-          <li>Weekly progress tracking</li>
-        </ul>
-      </div>
-
-      <!-- Group Training -->
-      <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition-all duration-300">
-        <h3 class="text-xl font-semibold text-red-600 mb-3">Group Sessions</h3>
-        <p class="text-gray-700 mb-4">Train with other fighters and fitness enthusiasts to push limits together in a competitive but supportive setup.</p>
-        <ul class="text-left list-disc list-inside text-gray-600 text-sm">
-          <li>Motivating team energy</li>
-          <li>HIIT & endurance focused</li>
-          <li>Max 8 per batch</li>
-        </ul>
-      </div>
-
-      <!-- Fight Camp / Advanced -->
-      <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition-all duration-300">
-        <h3 class="text-xl font-semibold text-red-600 mb-3">Fight Camp</h3>
-        <p class="text-gray-700 mb-4">Preparing for a fight or event? Get serious conditioning, sparring, weight cuts, and mindset coaching.</p>
-        <ul class="text-left list-disc list-inside text-gray-600 text-sm">
-          <li>Pre-fight diet and drills</li>
-          <li>Fight strategy & endurance</li>
-          <li>Mock fights & recovery</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-  <!-- Programs / Services -->
-  <section class="bg-white py-10">
-    <div class="max-w-5xl mx-auto px-6">
-      <h2 class="text-3xl font-bold text-center mb-8">💪 Training Programs</h2>
+  <!-- Training Programs Section -->
+  <section id="programs" class="bg-gray-100 py-16 px-6">
+    <div class="max-w-6xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-12">💪 Training Programs</h2>
       <div class="grid md:grid-cols-3 gap-8">
-        <div class="p-6 bg-gray-100 rounded shadow">
-          <h3 class="font-bold text-xl mb-2">1-on-1 Coaching</h3>
-          <p>Customized training sessions focused on your goals — strength, speed, or stamina.</p>
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-xl transition">
+          <h3 class="text-xl font-bold text-red-600 mb-3">1-on-1 Coaching</h3>
+          <p class="text-gray-700 mb-4">Get elite, personalized training tailored to your unique goals.</p>
+          <ul class="text-left list-disc list-inside text-sm text-gray-600">
+            <li>Form correction</li>
+            <li>Power + Endurance</li>
+            <li>Weekly goal reviews</li>
+          </ul>
         </div>
-        <div class="p-6 bg-gray-100 rounded shadow">
-          <h3 class="font-bold text-xl mb-2">Group Sessions</h3>
-          <p>Train with a team, build endurance, learn technique and fight strategy.</p>
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-xl transition">
+          <h3 class="text-xl font-bold text-red-600 mb-3">Group Training</h3>
+          <p class="text-gray-700 mb-4">Fun, high-energy sessions to build strength and community.</p>
+          <ul class="text-left list-disc list-inside text-sm text-gray-600">
+            <li>HIIT circuits</li>
+            <li>Partner drills</li>
+            <li>8-person batches</li>
+          </ul>
         </div>
-        <div class="p-6 bg-gray-100 rounded shadow">
-          <h3 class="font-bold text-xl mb-2">Fight Prep</h3>
-          <p>Need to cut weight, sharpen skills, and enter fight mode? I’ve got your back.</p>
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-xl transition">
+          <h3 class="text-xl font-bold text-red-600 mb-3">Fight Camp</h3>
+          <p class="text-gray-700 mb-4">Pro-level prep for real fights, competitions or next-level fitness.</p>
+          <ul class="text-left list-disc list-inside text-sm text-gray-600">
+            <li>Weight cuts</li>
+            <li>Sparring strategy</li>
+            <li>Mock fights</li>
+          </ul>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Gallery -->
-  <section class="max-w-5xl mx-auto px-6 py-12">
-    <h2 class="text-3xl font-bold text-center mb-6">📸 Training Gallery</h2>
+  <!-- Training Gallery -->
+  <section class="max-w-5xl mx-auto px-6 py-16">
+    <h2 class="text-4xl font-bold text-center mb-10">📸 Training Gallery</h2>
     <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-      <img src="assets/boxing1.jpg" class="rounded shadow">
-      <img src="assets/boxing2.jpg" class="rounded shadow">
-      <img src="assets/boxing3.jpg" class="rounded shadow">
-      <img src="assets/boxing4.jpg" class="rounded shadow">
+      <img src="assets/boxing1.jpg" class="rounded shadow hover:scale-105 transition">
+      <img src="assets/boxing2.jpg" class="rounded shadow hover:scale-105 transition">
+      <img src="assets/boxing3.jpg" class="rounded shadow hover:scale-105 transition">
+      <img src="assets/boxing4.jpg" class="rounded shadow hover:scale-105 transition">
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact" class="bg-black text-white py-12">
-    <div class="max-w-xl mx-auto px-6">
-      <h2 class="text-3xl font-bold text-center mb-6">📞 Contact Me</h2>
-      <p class="text-center text-lg">Email: <a href="mailto:mobisana@example.com" class="text-red-400 hover:underline">yaiphaba@example.com</a></p>
-      <p class="text-center text-lg mt-2">Phone: <a href="tel:+919876543210" class="text-red-400 hover:underline">+91 98765 43210</a></p>
-      <div class="text-center mt-4">
-        <a href="https://wa.me/919876543210" target="_blank" class="inline-block bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded">📱 WhatsApp Me</a>
+  <!-- Contact Section -->
+  <section id="contact" class="bg-black text-white py-16">
+    <div class="max-w-xl mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold mb-6">📞 Contact Me</h2>
+      <p class="text-lg">Email: <a href="mailto:yaiphaba@example.com" class="text-red-400 hover:underline">yaiphaba@example.com</a></p>
+      <p class="text-lg mt-2">Phone: <a href="tel:+918296371730" class="text-red-400 hover:underline">+91 82963 71730</a></p>
+      <div class="mt-6">
+        <a href="https://wa.me/918296371730" target="_blank" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded font-semibold">📱 WhatsApp Me</a>
       </div>
     </div>
   </section>
@@ -178,6 +125,5 @@
   <footer class="bg-gray-800 text-center text-white py-4">
     &copy; 2025 Yaiphaba Boxing. Built with 🥊 and 💻.
   </footer>
-
 </body>
 </html>
