--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
     </svg>
   </a>
 
+  <!-- Floating Instagram Button -->
+  <a
+    href="https://instagram.com/yaiphaba"
+    target="_blank"
+    class="fixed bottom-20 right-6 bg-pink-500 hover:bg-pink-600 text-white p-4 rounded-full shadow-lg z-50 flex items-center justify-center"
+    aria-label="View Instagram"
+    title="View Instagram"
+  >
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 2.2c3.2 0 3.584.012 4.85.07 1.17.056 1.96.24 2.41.4a4.8 4.8 0 011.72 1.12 4.8 4.8 0 011.12 1.72c.16.45.345 1.24.4 2.41.06 1.265.07 1.65.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.96-.4 2.41a4.8 4.8 0 01-1.12 1.72 4.8 4.8 0 01-1.72 1.12c-.45.16-1.24.345-2.41.4-1.265.06-1.65.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.96-.24-2.41-.4a4.8 4.8 0 01-1.72-1.12 4.8 4.8 0 01-1.12-1.72c-.16-.45-.345-1.24-.4-2.41-.06-1.265-.07-1.65-.07-4.85s.012-3.584.07-4.85c.056-1.17.24-1.96.4-2.41a4.8 4.8 0 011.12-1.72 4.8 4.8 0 011.72-1.12c.45-.16 1.24-.345 2.41-.4C8.416 2.212 8.8 2.2 12 2.2zm0-2.2C8.74 0 8.332.013 7.052.07 5.75.127 4.7.323 3.8.73c-.93.395-1.71.92-2.49 1.7a7.7 7.7 0 00-1.7 2.49C-.323 6.3-.127 7.35-.07 8.65-.013 9.928 0 10.336 0 13.6s-.013 3.672-.07 4.95c-.057 1.3-.253 2.35-.66 3.25-.395.93-.92 1.71-1.7 2.49a7.7 7.7 0 01-2.49 1.7C-1.3 23.677-2.35 23.873-3.65 23.93c-1.278.057-1.686.07-4.95.07s-3.672-.013-4.95-.07c-1.3-.057-2.35-.253-3.25-.66-.93-.395-1.71-.92-2.49-1.7a7.7 7.7 0 01-1.7-2.49c-.407-.9-.603-1.95-.66-3.25C.013 17.272 0 16.864 0 13.6S.013 9.928.07 8.65c.057-1.3.253-2.35.66-3.25.395-.93.92-1.71 1.7-2.49a7.7 7.7 0 012.49-1.7c.9-.407 1.95-.603 3.25-.66C8.328.013 8.736 0 12 0zm0 5.8a6.2 6.2 0 100 12.4 6.2 6.2 0 000-12.4zm0 10.2a4 4 0 110-8 4 4 0 010 8zm6.4-10.8a1.44 1.44 0 110-2.88 1.44 1.44 0 010 2.88z"/>
+    </svg>
+  </a>
+
   <!-- Hero Section with Background Video -->
   <section class="relative w-full h-screen overflow-hidden">
     <video autoplay muted loop playsinline class="absolute top-0 left-0 w-full h-full object-cover z-0">
