--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       Your browser does not support the video tag.
     </video>
     <div class="absolute inset-0 bg-black bg-opacity-60 z-10 flex flex-col items-center justify-center text-white text-center px-6">
-      <h1 class="text-5xl md:text-7xl font-extrabold uppercase tracking-wide">Yaiphaba Boxing</h1>
+      <h1 class="text-5xl md:text-7xl font-extrabold uppercase tracking-wide">Yai KO Club</h1>
       <p class="mt-4 text-lg md:text-2xl max-w-2xl">Unleash your inner fighter. Personal coaching. Real results.</p>
       <a href="#contact" class="mt-6 bg-red-600 hover:bg-red-700 px-6 py-3 rounded text-white font-semibold transition">Book a Session</a>
     </div>
@@ -55,7 +55,7 @@
   <section id="about" class="bg-white py-16 px-6">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-4xl font-bold mb-6">🥊 About Coach Yaiphaba</h2>
-      <p class="text-lg text-gray-700 mb-10">I'm <strong>Yaiphaba</strong>, a passionate and certified boxing trainer with over 5 years of experience transforming lives through powerful, personalized boxing training. Discipline, grit, and results are my core principles.</p>
+      <p class="text-lg text-gray-700 mb-10">I'm <strong>Yaiphaba</strong>, a passionate and certified boxing trainer with over 7 years of experience transforming lives through powerful, personalized boxing training. Discipline, grit, and results are my core principles.</p>
     </div>
     <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
       <div class="text-center">
@@ -67,7 +67,7 @@
         <ul class="list-disc list-inside text-gray-700 space-y-2 text-lg">
           <li>🏅 Certified Boxing Coach – Indian Boxing Federation</li>
           <li>🥋 Black Belt in Kickboxing – 2nd Dan</li>
-          <li>💪 5+ Years of Personal Coaching Experience</li>
+          <li>💪 7+ Years of Personal Coaching Experience</li>
           <li>🧠 Certified in Sports Psychology & Nutrition</li>
           <li>👥 Mentored 100+ Fighters Across India</li>
         </ul>
@@ -127,7 +127,7 @@
     <div class="max-w-xl mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold mb-6">📞 Contact Me</h2>
       <p class="text-lg">Email: <a href="mailto:yaiphaba@example.com" class="text-red-400 hover:underline">yaiphaba@example.com</a></p>
-      <p class="text-lg mt-2">Phone: <a href="tel:+918296371730" class="text-red-400 hover:underline">+91 82963 71730</a></p>
+      <p class="text-lg mt-2">Phone: <a href="tel:+918296371730" class="text-red-400 hover:underline">+91 8296371730</a></p>
       <div class="mt-6">
         <a href="https://wa.me/918296371730" target="_blank" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded font-semibold">📱 WhatsApp Me</a>
       </div>
